fix: update styles

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,22 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- og meta tags
+    ================================================== -->
+    <meta property="og:title" content="Playnet Interactive" />
+    <meta property="og:url" content="https://www.playnetinteractive.com/" />
+    <meta property="og:image" content="%PUBLIC_URL%/og.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Playnet Interactive the home of cutting-edge game development" />
+    <meta property="og:locale" content="en_GB" />
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Welcome to Playnet Interactive"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
