fix: update meta tag url

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     ================================================== -->
     <meta property="og:title" content="Playnet Interactive" />
     <meta property="og:url" content="https://www.playnetinteractive.com/" />
-    <meta property="og:image" content="%PUBLIC_URL%/og.png" />
+    <meta property="og:image" content="https://www.playnetinteractive.com/og.png" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Playnet Interactive the home of cutting-edge game development" />
     <meta property="og:locale" content="en_GB" />
